sistema visual pronto

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,18 +1,9 @@
-/Entidades/
 /Graficos/
+/JObjects/
 /Main/
 /Menu/
-/World/
-/backup e inutilidades/
-/cenario/
-/chefes/
-/esquema de fases Tai.pdn
+/cursorHand.png
+/cursorStandart.png
 /icone-jogo/
-/inimigos/
-/menus/
-/niveis/
-/off/
-/on/
-/personagens/
-/spritesheet.png
-/JObjects/
+/cursor.png
+/cursorBar.png
